...
    }
    
    private func startAngle(for index: Int) -> Double {
        let previousValues = data.prefix(index).map { $0.1 }
        let total = data.reduce(0) { $0 + $1.1 }
        let previousSum = previousValues.reduce(0, +)
        return (previousSum / total) * 360
    }
    
    private func endAngle(for index: Int) -> Double {
        let previousValues = data.prefix(index + 1).map { $0.1 }
        let total = data.reduce(0) { $0 + $1.1 }
        let previousSum = previousValues.reduce(0, +)
...
